Add routes, stylings and components

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="HOSTEL MANAGEMENT APP"
     />
-    <title>React App</title>
+    <title>HOSTEL MANAGEMENT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
